--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.error.include-message=always
 spring.liquibase.change-log=liquibase-changeLog.xml
+
+NUMBER_OF_SYMBOLS_OF_UNIQUE_CODE=6
+NUMBER_OF_SYMBOLS_OF_SHORT_LINK=6
