--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>job4j_URL_short_cut</artifactId>
+    <groupId>urlshortcut</groupId>
+    <artifactId>URL_short_cut</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -25,18 +25,18 @@
 
     <profiles>
         <profile>
-            <id>test</id>
+            <id>production</id>
             <properties>
-                <liquibase.config>src/main/resources/liquibase_test.properties</liquibase.config>
+                <liquibase.config>src/main/resources/liquibase.properties</liquibase.config>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
         <profile>
-            <id>production</id>
+            <id>test</id>
             <properties>
-                <liquibase.config>src/main/resources/liquibase.properties</liquibase.config>
+                <liquibase.config>src/main/resources/liquibase_test.properties</liquibase.config>
             </properties>
         </profile>
     </profiles>
